DC-303 | UI | Set Up Web Server Module to Retrieve System Status Data (#301)
## [DC-303: Set Up Web Server Module to Retrieve System Status
Data](https://flexgen.atlassian.net/browse/DC-303)

## Description
Sets up the module within the web server for SystemStatus
- Sets up websocket gateway (`systemStatus.gateway.ts`) which will
subscribe to `/cops/stats` URI, parse all data received, and send it to
the frontend to be displayed
- Adds initial implementation of a GET method, which calls a fims get on
`/cops/stats` , currently this method will not receive data back from
fims since further backend changes will be required
- Adds route for new page, very basic page implementation just to allow
for QA to be completed

## How Has This Been Tested?
Manually tested that data is flowing through the gateway and that it is
properly formatted by utilizing the networking tab on the browser and by
logging the data to the browser console

Steps to QA:
BEFORE QAing: Add `"system_status": true` to the web_ui.json file
Video showing QA Process - 

https://github.com/flexgen-power/hybridos/assets/109531653/ace48875-bcf1-44d9-a49b-abda5c386fcd


1. Build the web_apps repo with the required changes
2. Run hybridos and log into the UI with a user that either has admin or
developer role status
3. Navigate to the System Status page
4. Open the developer tools and look in the browser console
5. Ensure that data is being logged (should appear as an object with
fields for serviceName, serviceStatus, memoryUsage, uptime, and
lastRestart)
