# web_apps/packages/hybridos/server/src/bff/SystemStatus/dto/serviceStatusResponse.dto.ts
@@ -1,0 +1,68 @@
+import { ApiProperty } from '@nestjs/swagger'
+import {
+    IsNumber,
+    IsString,
+    IsArray,
+    IsOptional,
+} from 'class-validator'
+import { systemStatusDescriptions } from '../systemStatus.constants'
+
+// TODO: right now, all fields are optional since we aren't getting all
+// from backend. Update to remove optional validators once all data is flowing
+export class ServiceStatusReponse {
+    @ApiProperty({ 
+        description: systemStatusDescriptions.dependencies 
+    })
+    @IsArray()
+    @IsOptional()
+    dependencies?: string[]
+
+    @ApiProperty({
+        description: systemStatusDescriptions.serviceName,
+    })
+    @IsString()
+    @IsOptional()
+    serviceName?: string
+
+    @ApiProperty({
+        description: systemStatusDescriptions.serviceStatus,
+    })
+    @IsString()
+    @IsOptional()
+    serviceStatus?: string
+
+    @ApiProperty({
+        description: systemStatusDescriptions.connectionStatus,
+    })
+    @IsString()
+    @IsOptional()
+    connectionStatus?: string
+
+    @ApiProperty({
+        description: systemStatusDescriptions.cpuUsage,
+    })
+    @IsNumber()
+    @IsOptional()
+    cpuUsage?: number
+
+    @ApiProperty({
+        description: systemStatusDescriptions.memoryUsage,
+    })
+    @IsNumber()
+    @IsOptional()
+    memoryUsage?: number
+
+    @ApiProperty({
+        description: systemStatusDescriptions.serviceUptime,
+    })
+    @IsNumber()
+    @IsOptional()
+    uptime?: number
+    
+    @ApiProperty({
+        description: systemStatusDescriptions.lastRestart,
+    })
+    @IsString()
+    @IsOptional()
+    lastRestart?: string
+}
